fix: hotfix in install.sh to avoid test errors